Prevent word wrap in highlight tooltip

--- a/styles/pup/components/_highlight-tooltip.scss
+++ b/styles/pup/components/_highlight-tooltip.scss
@@ -14,10 +14,12 @@
     display: inline-block;
     font-size: font-size(-1);
     font-weight: font-weight(bold);
+    left: 50%;
     line-height: inherit;
     padding: 0.5em 0.75em;
     position: absolute;
-    transform: translateY(calc(-100% - #{$triangle-size} - #{$bottom-margin}));
+    transform: translateX(-50%) translateY(calc(-100% - #{$triangle-size} - #{$bottom-margin}));
+    white-space: pre;
 
     &:before,
     &:after {
